# sentipede

./: .gitignore  CMakeLists.txt  README.md
include/: Entity.hpp  World.hpp
src/: CMakeLists.txt  World.cpp  main.cpp
src/Entities/: CMakeLists.txt  Entity.cpp
